// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`About tests 1`] = `
Array [
  <h1>
    About Page
  </h1>,
  <p>
    This is just a simple
     
    <a
      href="https://github.com/preactjs/preact"
    >
      preact
    </a>
     typescript demo project messing with
     
    <a
      href="https://github.com/vuejs/vite#bare-module-resolving"
    >
      vite
    </a>
     for the dev server, stupid fast, no bundling and hmr.
  </p>,
  <p>
    Also utilizing
     
    <a
      href="https://github.com/parcel-bundler/parcel"
    >
      parcel
    </a>
     as the bundler. 
    <a
      href="https://github.com/facebook/jest"
    >
      Jest
    </a>
     and
     
    <a
      href="https://github.com/cypress-io/cypress"
    >
      cypress
    </a>
     for testing.
  </p>,
]
`;

exports[`App Interaction 1`] = `
<Component>
  <div>
    <nav
      className="nav"
    >
      <div
        className="container"
      >
        <K
          className="active pagename current"
          href="/"
          onClick={[Function]}
        >
          <a
            className="active pagename current"
            href="/"
            onClick={[Function]}
          >
            TinyProject
          </a>
        </K>
        <K
          className=""
          href="/about"
          onClick={[Function]}
        >
          <a
            className=""
            href="/about"
            onClick={[Function]}
          >
            About
          </a>
        </K>
        <a
          href="https://github.com/ssulivan11/tiny-project"
        >
          Github
        </a>
      </div>
    </nav>
    <div
      className="container"
    >
      <undefined>
        <Component
          path="/"
          title="Welcome to Tiny Project!"
        >
          <div
            className="text-center"
          >
            <img
              alt="Smiley face"
              height="200"
              src="src/assets/android-chrome-512x512.png"
              style={
                Object {
                  "display": "block",
                  "margin": "0 auto",
                }
              }
              width="200"
            />
            <h1>
              Welcome to Tiny Project!
            </h1>
            <p>
              Read a little more 
              <K
                href="/about"
              >
                <a
                  href="/about"
                  onClick={[Function]}
                >
                  here
                </a>
              </K>
            </p>
          </div>
        </Component>
        <Component
          path="/about"
          title="About the Tiny Project"
        >
          <h1>
            About the Tiny Project
          </h1>
          <p>
            This is just a simple
             
            <a
              href="https://github.com/preactjs/preact"
            >
              preact
            </a>
             typescript demo project messing with
             
            <a
              href="https://github.com/vuejs/vite#bare-module-resolving"
            >
              vite
            </a>
             for the dev server, stupid fast, no bundling and hmr.
          </p>
          <p>
            Also utilizing
             
            <a
              href="https://github.com/parcel-bundler/parcel"
            >
              parcel
            </a>
             as the bundler. 
            <a
              href="https://github.com/facebook/jest"
            >
              Jest
            </a>
             and
             
            <a
              href="https://github.com/cypress-io/cypress"
            >
              cypress
            </a>
             for testing.
          </p>
        </Component>
      </undefined>
    </div>
  </div>
</Component>
`;

exports[`Home tests 1`] = `
<div
  className="text-center"
>
  <img
    alt="Smiley face"
    height="200"
    src="src/assets/android-chrome-512x512.png"
    style={
      Object {
        "display": "block",
        "margin": "0 auto",
      }
    }
    width="200"
  />
  <h1>
    Testing
  </h1>
  <p>
    Read a little more 
    <K
      href="/about"
    >
      here
    </K>
  </p>
</div>
`;
